--- a/index.html
+++ b/index.html
@@ -277,39 +277,40 @@
 
 
 <!-- footer section -->
-<div class="foot-sec container-fluid bg-white" style="margin-top: 100px;">
-  <div class="container">
-  <div class="d-flex">
-    <div>
-      <h3>BLUMENHAUS SCHOLZ-TAUTZ</h3>
+<div class="foot-sec container-fluid bg-white py-5" style="margin-top: 100px;">
+  <div class="container footer-container">
+  <div class="footer-cont d-flex justify-content-between">
+    <div class="foot-child1 d-flex flex-column">
+      <h3 style="color: #D39B36;">BLUMENHAUS SCHOLZ-TAUTZ</h3>
     <h5>HAUPTSTR. 52</h5>
     <h5>79787 LAUCHRINGEN</h5>
     </div>
-    <div>
-      <div>
+    <div class="foot-child2 d-flex flex-column">
+      <div class="foot-same d-flex">
         <p>HOCHZEITSFLORISTIK</p>
-        <span></span>
+        <span style="width: 5px;height: 5px;background-color: #D39B36;margin: 5px 12px 0;"></span>
         <p>TRAUERFLORISTIK</p>
-        <span></span>
+        <span style="width: 5px;height: 5px;background-color: #D39B36;margin: 5px 12px 0;"></span>
         <p>SCHNITTBLUMEN NACH SAISON</p>
-        <span></span>
+        <span style="width: 5px;height: 5px;background-color: #D39B36;margin: 5px 12px 0;"></span>
       </div>
-      <div>
+      <div class="foot-same d-flex ">
         <p>GESCHENKIDEEN</p>
-        <span></span>
+        <span style="width: 5px;height: 5px;background-color: #D39B36;margin: 5px 12px 0;"></span>
         <p>ZIMMER.- UND TERASSENPFLANZEN</p>
-        <span></span>
+        <span style="width: 5px;height: 5px;background-color: #D39B36;margin: 5px 12px 0;"></span>
         <p>EVENT.- UND TISCHDEKO</p>
-        <span></span>
+        <span style="width: 5px;height: 5px;background-color: #D39B36;margin: 5px 12px 0;"></span>
       </div>
-      <div>
+      <div class="foot-same d-flex ">
         <p>DÜNGER, ERDE, PESTIZIDE, FUNGIZIDE</p>
-        <span></span>
+        <span style="width: 5px;height: 5px;background-color: #D39B36;margin: 5px 12px 0;"></span>
         <p>KERAMIK, GLAS + KUNSTSTOFFGEFÄSSE</p>
+        <span style="width: 5px;height: 5px;background-color: #D39B36;margin: 5px 12px 0;"></span>
       </div>
     </div>
   </div>
-  <div><h4>© COPYRIGHT 2023 - IMPRESSUM | DATENSCHUTZ</h4></div>
+  <div class="foot-child3"><h4>© COPYRIGHT 2023 - IMPRESSUM | DATENSCHUTZ</h4></div>
 </div>
 </div>
 
